feat: 텍스트 정렬을 위한 align 속성 추가 #28
close #28

--- a/src/stories/mdx/Textbox.mdx
+++ b/src/stories/mdx/Textbox.mdx
@@ -13,6 +13,7 @@ import * as TextboxStories from '../components/textbox.stories.ts';
 <aa-textbox name="textboxName"
             placeholder="placeholder"
             value="value"
+            align="left(기본값)|center|right"
             disabled readonly></aa-textbox>
 ```
 
@@ -34,3 +35,6 @@ import * as TextboxStories from '../components/textbox.stories.ts';
 
 ## Custom width
 <Canvas of={TextboxStories.CustomWidth} />
+
+## Text align
+<Canvas of={TextboxStories.Align} />
