feat: aa-checkbox 컴포넌트 문서화 #45
close #45

--- a/src/stories/mdx/Calendar.mdx
+++ b/src/stories/mdx/Calendar.mdx
@@ -21,14 +21,14 @@ import * as CalendarStories from '../components/calendar.stories.ts';
 </div>
 `} language='html' />
 
-<Canvas of={CalendarStories.Usage} source="none" layout="centered" sourceState="none" />
+<Canvas of={CalendarStories.Usage} layout="centered" sourceState="none" />
 
 캘린더 컴포넌트는 부모 컨테이너 요소의 크기에 따라 캘린더의 크기가 조절됩니다.<br />
 필요 시 에 컨테이너 요소의 스타일링을 통해 캘린더의 크기를 조절할 수 있습니다.
 
 <br /><br />
 
-## 지원 속성 및 이벤트
+### 지원 속성 및 이벤트
 
 <Controls of={CalendarStories.Usage} />
 
@@ -38,7 +38,7 @@ import * as CalendarStories from '../components/calendar.stories.ts';
 
 <br /><br />
 
-### 컴포넌트 형태
+## 컴포넌트 형태
 
 <br />
 
@@ -48,7 +48,7 @@ import * as CalendarStories from '../components/calendar.stories.ts';
 선택 한 형식에 따라 이동할 수 있는 뷰가 달라지며, 지정한 캘린더 뷰에서 선택한 날짜가 `value`, `text`로 설정됩니다.
 
 
-<Canvas of={CalendarStories.CalendarModes} source="none" layout="fullscreen" sourceState="none" />
+<Canvas of={CalendarStories.CalendarModes} layout="fullscreen" sourceState="none" />
 
 <br />
 
