fix: change 이벤트 예제 코드 오타 수정

--- a/src/stories/mdx/DatePicker.mdx
+++ b/src/stories/mdx/DatePicker.mdx
@@ -67,7 +67,7 @@ import * as DatePickerStories from '../components/date-picker.stories.ts';
 캘린더의 날짜 선택 또는 유효한 날짜 문자열을 입력하여 선택 날짜가 변경되면 발생하는 이벤트입니다.
 
 <Source language="javascript" code={`
-const datePicker = document.querySelector('aa-datepicker#target');
+const datePicker = document.querySelector('aa-date-picker#target');
 datePicker.addEventListener('change', (event) => {
   const { value, text } = event.detail;
 
